# monitaur

./: package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: displays.rs  lib.rs  main.rs
